--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compileOnly "org.jasypt:jasypt:1.9.3"
     compileOnly "com.fasterxml.jackson.module:jackson-module-kotlin:2.11.0"
+    testImplementation "org.jasypt:jasypt:1.9.3"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:5.6.2"
+    runtimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
 }
 
 dokka {
